18_1/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: root-ingress
  namespace: myapp
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /order($|/)(.*)
          backend:
            serviceName: app-order-nginx-service
            servicePort: 8000
#        - path: /users/me
#- path: /otusapp/kirsanov($|/)(.*)
